--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.main{
+/* .main{
     width: 100%;
     height: 96vh;
 }
@@ -13,4 +13,12 @@
 }
 .dark{
     background-color: black;
+} */
+
+
+
+#clivck{
+    background-color: none;
+    border: none;
+    color: blue;
 }
