--- a/style.css
+++ b/style.css
@@ -22,3 +22,20 @@
     border: none;
     color: rgb(0, 0, 175);
 } */
+
+/* 
+.main{
+    height: 100vh;
+    width: 100%;
+    background-image:url(https://www.rotational.co.uk/assets/images/yMLAGVx.gif) ;
+    background-size: cover;
+    position: relative;
+}
+
+.character{
+    width: 300px;
+    height: 200px;
+    object-fit: contain;
+    position: absolute;
+    bottom: 10px;
+} */
